[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {email = "thomas@gibfest.dk"},
  {name = "Thomas Steen Rasmussen"}
]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: BSD :: FreeBSD",
]

dependencies = [
    "prometheus-client == 0.19.0",
]

description = "A Prometheus exporter for FreeBSD gstat data"
dynamic = ["version"]
license = {text = "BSD 3-Clause License"}
name = "gstat_exporter"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
gstat_exporter = "gstat_exporter.gstat_exporter:main"

[project.optional-dependencies]
dev = ["twine == 4.0.2", "pre-commit == 3.5.0", "setuptools-scm == 8.0.4", "build==1.0.3"]

[project.urls]
homepage = "https://github.com/tykling/gstat_exporter"

[tool.setuptools_scm]
